# Matrix

./: .clang-format  CMakeLists.txt  README.md  main.cpp
inc/: jagged_array.hpp
include/: array.hpp  common.hpp  matrix.hpp  rectangular_array.hpp
tests/: CMakeLists.txt  common.hpp  eigen_matrix.cpp  generate_matrix.py  ideal_count_determinant.cpp  signature.hpp  test_determinant.sh  unit_tests.cpp
tests/array/: common.hpp  test_simple.hpp  test_throwing_allocation.hpp  test_throwing_type.hpp  types_for_test.hpp
